# hackathon-team-compression

./: .gitignore  .pre-commit-config.yaml  README.md  data  pyproject.toml  ruff.toml
configs/: eval.yaml  train.yaml
configs/codecarbon/: default.yaml
configs/datamodule/: default.yaml
configs/experiment/: example.yaml  perceiver.yaml  perceiver_64.yaml  perceiver_64_layer_2.yaml  pruning.yaml  pruning_multistep.yaml  token_drop.yaml
configs/hparams_search/: basic.yaml  optuna.yaml
configs/hydra/: default.yaml  eval.yaml
configs/logger/: wandb.yaml
configs/module/: vit_s_16.yaml  vit_s_16_layers2_8_drop0.5.yaml  vit_s_16_mod.yaml  vit_s_16_token_drop.yaml
configs/paths/: default.yaml
configs/trainer/: imagenet_vit_s_16.yaml
src/: eval.py  test.py  train.py  valid.py
src/callbacks/: mlp_pruning.py
src/datamodules/: imagenet_datamodule.py
src/modules/: imagenet_module.py
src/modules/nets/: router.py  simple_drop.py  vision_transformer.py
src/utils/: __init__.py  instantiators.py  logging_utils.py  pylogger.py  rich_utils.py  utils.py
