[project]
name = "hackathon-2026"
version = "0.1.0"
description = "How much energy does it really take to train a competent vision AI model?"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "codecarbon",
    "hydra-colorlog>=1.2.0",
    "hydra-core>=1.3.2",
    "hydra-optuna-sweeper>=1.2.0",
    "lightning<=2.6.1",
    "rich>=15.0.0",
    "rootutils>=1.0.7",
    "scipy>=1.17.1",
    "torch==2.10.0",
    "torchvision==0.25.0",
    "wandb>=0.26.1",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
codecarbon = { git = "https://github.com/Archiel19/codecarbon.git", branch = "wandb" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
dev = ["ruff>=0.13.3"]
